# fedgenie3

./: .gitignore  README.md  pyproject.toml  tasks.py  tasks.sh
configs/: extratrees.yaml  extratrees_forest.yaml  gradientboosting.yaml  lightgbm.yaml  randomforest.yaml  xgboost.yaml
fedgenie3/: __init__.py  client.py  client_app.py  run.py  server_app.py  strategy.py
fedgenie3/data/: dataset.py  processing.py  processor.py  simulation.py
fedgenie3/data/preprocessing/: dream_five.py
fedgenie3/genie3/: config.py  configs.py  dataset.py  eval.py  interfaces.py  metrics.py  modeling.py  run.py
genie3/: config.py  data.py  eval.py  genie3.py  interfaces.py  modeling.py  plot.py  runner.py  schema.py  utils.py
genie3/data/: __init__.py  dataset.py  loading.py  processing.py
genie3/modeling/: __init__.py  genie3.py  regressor.py
genie3/regressor/: __init__.py  extratrees.py  gradientboosting.py  lightgbm.py  randomforest.py  xgboost.py
notebooks/: dream5.ipynb
scripts/: 01_preprocess.py  preprocess_dream_five.py  run_centralized.py  run_centralized_wandb.py  run_federated_simulation.py
tests/: test_config.py
