[project]
name = "fedgenie3"
version = "0.1.0"
description = "A federated version of GENIE3."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "scikit-learn~=1.5.2",
    "pydantic~=2.9.2",
    "typer~=0.12.5",
    "loguru~=0.7.2",
    "pytest~=8.3.3",
    "pandas~=2.2.3",
    "flwr[simulation]==1.12.0",
    "flwr-datasets>=0.4.0",
    "datasets>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.41",
    "mkdocstrings[python]>=0.26.2",
    "pytest>=8.3.3",
    "invoke>=2.2.0",
    "ruff>=0.6.9",
    "synapseclient>=4.6.0",
    "jupyter>=1.1.1",
]
