[project]
name = "genie3"
version = "0.1.0"
description = "A implementation of GENIE3."
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "scikit-learn~=1.5.2",
    "typer~=0.12.5",
    "pandas[performance]~=2.2.3",
    "lightgbm>=4.5.0",
    "pydantic>=2.10.4",
    "numpy>=1.26.4",
    "tqdm>=4.67.0",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.2",
    "xgboost>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "invoke>=2.2.0",
    "ruff>=0.6.9",
    "synapseclient>=4.6.0",
]

[tool.ruff]
line-length = 79
